tests/test_assets/semantic/invalid/strings/initializer_size.expected
semantic error at line 6: string literal requires destination array size 6, got 5
1 semantic error generated.
